--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
     "directories": {},
     "dependencies": {
       "Microsoft/TypeScript": "github:Microsoft/TypeScript@^1.5.0-beta",
-      "angular2": "npm:angular2@^2.0.0-alpha.27",
+      "angular2": "npm:angular2@2.0.0-alpha.29",
       "bootstrap-material": "github:fezVrasta/bootstrap-material-design@^0.3.0",
-      "es6-shim": "github:es-shims/es6-shim@^0.32.1",
+      "es6-shim": "github:es-shims/es6-shim@^0.32.2",
       "reflect-metadata": "npm:reflect-metadata@^0.1.0",
-      "traceur": "github:jmcriffey/bower-traceur@^0.0.90"
+      "traceur": "github:jmcriffey/bower-traceur@^0.0.90",
+      "zone.js": "npm:zone.js@^0.5.1"
     },
     "devDependencies": {
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.90",
       "typescript": "github:mhegazy/typescript@v1.5-beta2"
     }
   }
